Fixed wrong image url and extra margin

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,7 +67,7 @@ a:focus, a:active, a:hover {
   justify-content: center;
   align-items: center;
 
-  margin: 10rem 10rem 2rem;
+  margin: 2rem 10rem;
   width: 50%;
 }
 
